--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           <input id="examYear" type="number" placeholder="例如 114" />
         </div>
 
+      <div class="form-row">
+  <label for="scoreChinese">國文級分：</label>
+  <input id="scoreChinese" type="number" placeholder="例如 13" />
+</div>
+        
         <div class="form-row">
           <span>欲換算與查詢的一階年度：</span>
         </div>
@@ -120,4 +125,5 @@
   <script src="app.js"></script>
  </body>
 </html>
+
 
