--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
         </div>
 
       <div class="form-row">
-  <label for="scoreChinese">國文級分：</label>
+  <label for="scoreChinese">國文：</label>
   <input id="scoreChinese" type="number" placeholder="例如 13" />
 </div>
 
         <div class="form-row">
-  <label for="scoreEnglish">英文級分：</label>
+  <label for="scoreEnglish">英文：</label>
   <input id="scoreEnglish" type="number" placeholder="例如 12" />
 </div>
 
 <div class="form-row">
-  <label for="scoreMathA">數學A級分：</label>
+  <label for="scoreMathA">數A：</label>
   <input id="scoreMathA" type="number" placeholder="例如 11" />
 </div>
 
 <div class="form-row">
-  <label for="scoreMathB">數學B級分：</label>
+  <label for="scoreMathB">數B：</label>
   <input id="scoreMathB" type="number" placeholder="例如 10" />
 </div>
 
        <div class="form-row">
-  <label for="scoreSocial">社會級分：</label>
+  <label for="scoreSocial">社會：</label>
   <input id="scoreSocial" type="number" placeholder="例如 11" />
 </div>
 
 <div class="form-row">
-  <label for="scoreScience">自然級分：</label>
+  <label for="scoreScience">自然：</label>
   <input id="scoreScience" type="number" placeholder="例如 10" />
 </div> 
         <div class="form-row">
@@ -149,6 +149,7 @@
   <script src="app.js"></script>
  </body>
 </html>
+
 
 
 
