--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- 綠色結果區：目前只做標題動態更新，換算邏輯之後再加 -->
       <div class="card result-card">
         <h2>級分換算與一階門檻比較（預留區）</h2>
-
+       <div id="resultCards" class="result-cards"></div>
         <table class="result-table">
           <thead>
             <tr>
@@ -149,6 +149,7 @@
   <script src="app.js"></script>
  </body>
 </html>
+
 
 
 
