--- a/index.html
+++ b/index.html
@@ -192,8 +192,12 @@
   <script src="departments.js"></script>  <!-- 新增這行 -->
   <script src="scoreConverter.js"></script>
   <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<script src="exportPdf.js"></script>
  </body>
 </html>
+
 
 
 
