--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- 顯示篩選一覽表的 iframe -->
         <div class="frame-wrapper">
   <div class="scroll-guide" aria-hidden="true">
-    ⇦ 左右拖動可查看完整科系表格 ⇨
+    ↓ 先向下卷動找到目標科系，再左右拖動查看資料 ↓
   </div>
  <iframe id="sieveFrame" title="大學申請一階篩選一覽表預覽區"></iframe>
 </div>
@@ -200,6 +200,7 @@
 <script src="exportPdf.js"></script>
  </body>
 </html>
+
 
 
 
