--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>學測分數換算與大學一階篩選查詢（骨架版）</title>
+  <title>學測分數換算與大學一階篩選查詢（2026/01/27版）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -85,7 +85,7 @@
 
         <div class="form-row">
         <span style="font-size: 0.8rem; color: #64748b;">
-         若下拉選單尚未提供此校的科系清單，可在下方直接輸入科系名稱。
+         若下拉選單中無該科系名稱，可在下方輸入框中直接鍵入名稱。
         </span>
         </div>
 
@@ -200,6 +200,7 @@
 <script src="exportPdf.js"></script>
  </body>
 </html>
+
 
 
 
