--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
       <div class="card input-card">
         <h2>基本資料輸入</h2>
 
+                <div class="corner-meta" aria-label="版本與聯絡資訊">
+          <div class="corner-meta__ver">v2026.01.29</div>
+
+          <div class="corner-meta__email">
+            <a
+              class="corner-meta__mailto"
+              href="mailto:maomaohsu@m1.tlsh.ylc.edu.tw?subject=%E5%AD%B8%E6%B8%AC%E6%8F%9B%E7%AE%97%E7%B3%BB%E7%B5%B1%E5%9B%9E%E5%A0%B1%2F%E5%BB%BA%E8%AD%B0"
+              title="點擊以寄信"
+            >Email</a>
+            <span class="corner-meta__sep">：</span>
+            <span class="corner-meta__plain" title="可直接選取複製">maomaohsu@m1.tlsh.ylc.edu.tw</span>
+          </div>
+
+          <div class="corner-meta__hint">若無法開啟，請直接複製此信箱</div>
+        </div>
+
         <div class="form-row">
           <label for="examYear">考試年度（學測）：</label>
           <input id="examYear" type="number" placeholder="例如 114" />
@@ -200,6 +216,7 @@
 <script src="exportPdf.js"></script>
  </body>
 </html>
+
 
 
 
