--- a/index.html
+++ b/index.html
@@ -35,34 +35,40 @@
           <input id="examYear" type="number" placeholder="例如 114" />
         </div>
 
-      <div class="form-row">
+      <div class="form-row score-row">
   <label for="scoreChinese">國文：</label>
   <input id="scoreChinese" type="number" placeholder="例如 13" />
+  <span class="bm-badge" id="bm-scoreChinese"></span>
 </div>
 
-        <div class="form-row">
+        <div class="form-row score-row">
   <label for="scoreEnglish">英文：</label>
   <input id="scoreEnglish" type="number" placeholder="例如 12" />
+  <span class="bm-badge" id="bm-scoreEnglish"></span>
 </div>
 
-<div class="form-row">
+<div class="form-row score-row">
   <label for="scoreMathA">數A：</label>
   <input id="scoreMathA" type="number" placeholder="例如 11" />
+  <span class="bm-badge" id="bm-scoreMathA"></span>
 </div>
 
-<div class="form-row">
+<div class="form-row score-row">
   <label for="scoreMathB">數B：</label>
   <input id="scoreMathB" type="number" placeholder="例如 10" />
+  <span class="bm-badge" id="bm-scoreMathB"></span>
 </div>
 
-       <div class="form-row">
+       <div class="form-row score-row">
   <label for="scoreSocial">社會：</label>
   <input id="scoreSocial" type="number" placeholder="例如 11" />
+  <span class="bm-badge" id="bm-scoreSocial"></span>
 </div>
 
-<div class="form-row">
+<div class="form-row score-row">
   <label for="scoreScience">自然：</label>
   <input id="scoreScience" type="number" placeholder="例如 10" />
+  <span class="bm-badge" id="bm-scoreScience"></span>
 </div> 
         <div class="form-row">
           <span>欲換算與查詢的一階年度：</span>
@@ -216,6 +222,7 @@
 <script src="exportPdf.js"></script>
  </body>
 </html>
+
 
 
 
